[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Debug.gd" type="Script" id=1]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_left = -11.0
margin_top = -9.0
margin_right = 332.0
margin_bottom = 189.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 112.0
margin_top = 10.0
margin_right = 207.0
margin_bottom = 56.0
text = "LEVEL 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 225.0
margin_top = 9.0
margin_right = 299.0
margin_bottom = 59.0
text = "LEVEL 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 31.0
margin_top = 63.0
margin_right = 163.0
margin_bottom = 117.0
text = "LEVEL 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 126.0
margin_top = 124.0
margin_right = 219.0
margin_bottom = 168.0
text = "BOSSFIGHT!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 229.0
margin_top = 118.0
margin_right = 304.0
margin_bottom = 169.0
text = "EINDE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 191.0
margin_top = 75.0
margin_right = 299.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HACKERMAN
HOURS WHOO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 11.0
margin_top = 11.0
margin_right = 108.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CHEATY HACK CONSOLE DINGUS V9.1"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 18.0
margin_top = 126.0
margin_right = 115.0
margin_bottom = 174.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MARV MARV MARV MARV MARV MARV"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CanvasLayer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="CanvasLayer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="CanvasLayer/Button5" to="." method="_on_Button5_pressed"]
